--- a/netlify.toml
+++ b/netlify.toml
@@ -150,6 +150,16 @@
   to = "/pages/project-payment/project-payment-0.html"
   status = 200
 
+[[redirects]]
+  from = "/terms"
+  to = "/pages/terms/terms.html"
+  status = 200
+
+[[redirects]]
+  from = "/termos"
+  to = "/pages/terms/terms.html"
+  status = 200
+
 # 404 fallback para home
 [[redirects]]
   from = "/*"
